--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,4 +18,6 @@ steps:
     javaHomeOption: 'JDKVersion'
     jdkVersionOption: '1.8'
     jdkArchitectureOption: 'x64'
+    publishJUnitResults: false
+    testResultsFiles: '**/TEST-*.xml'
     tasks: 'build'
