--- a/AutoHunt/app/build.gradle
+++ b/AutoHunt/app/build.gradle
@@ -23,6 +23,10 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
