add splash screen and app logo

--- a/AutoHunt/app/build.gradle
+++ b/AutoHunt/app/build.gradle
@@ -73,4 +73,6 @@ dependencies {
 
     // Utils
     implementation "com.jakewharton.timber:timber:$versions.timber"
+    implementation "com.github.ybq:Android-SpinKit:$versions.spinner"
+
 }
