--- a/AutoHunt/app/build.gradle
+++ b/AutoHunt/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
@@ -23,6 +24,9 @@ android {
         }
     }
 
+    dataBinding {
+        enabled = true
+    }
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
@@ -35,12 +39,19 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Design
+    implementation "com.google.android.material:material:$versions.material"
     implementation "androidx.constraintlayout:constraintlayout:$versions.constraintLayout"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$versions.swipeRefreshLayout"
+    implementation "androidx.appcompat:appcompat:$versions.appCompat"
+    implementation "androidx.legacy:legacy-support-v4:$versions.legacy"
+    implementation "androidx.viewpager2:viewpager2:$versions.viewPager2"
+
 
     // lifecycle
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
@@ -74,5 +85,5 @@ dependencies {
     // Utils
     implementation "com.jakewharton.timber:timber:$versions.timber"
     implementation "com.github.ybq:Android-SpinKit:$versions.spinner"
-
+    implementation "com.gauravk.bubblenavigation:bubblenavigation:$versions.bubbleNavigation"
 }
