--- a/AutoHunt/app/src/main/AndroidManifest.xml
+++ b/AutoHunt/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mds.mobile.autohunt">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".authentication.views.AHAuthActivity"></activity>
+        <activity android:name=".authentication.views.activities.AHAuthActivity"
+            android:windowSoftInputMode="adjustPan">
+        </activity>
         <activity android:name=".home.views.activities.AHHomeActivity" />
         <activity android:name=".splashscreen.AHSplashScreenActivity">
             <intent-filter>
