--- a/AutoHunt/app/src/main/AndroidManifest.xml
+++ b/AutoHunt/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".authentication.views.activities.AHAuthActivity"
-            android:windowSoftInputMode="adjustPan">
+            android:windowSoftInputMode="adjustResize">
         </activity>
         <activity android:name=".home.views.activities.AHHomeActivity" />
         <activity android:name=".splashscreen.AHSplashScreenActivity">
