--- a/AutoHunt/app/build.gradle
+++ b/AutoHunt/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "mds.mobile.autohunt"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -52,7 +52,6 @@ dependencies {
     implementation "androidx.legacy:legacy-support-v4:$versions.legacy"
     implementation "androidx.viewpager2:viewpager2:$versions.viewPager2"
 
-
     // lifecycle
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$versions.lifecycle"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle"
@@ -77,6 +76,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$versions.okhttp"
 
     // Image
+    implementation "com.github.chrisbanes:PhotoView:$versions.photoView"
     implementation "de.hdodenhof:circleimageview:$versions.circleImageView"
     implementation "com.github.bumptech.glide:glide:$versions.glide"
     annotationProcessor "com.github.bumptech.glide:compiler:$versions.glide"
