--- a/AutoHunt/app/src/main/AndroidManifest.xml
+++ b/AutoHunt/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="mds.mobile.autohunt">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".utils.AHApplicationController"
@@ -12,10 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".authentication.views.activities.AHAuthActivity"
-            android:windowSoftInputMode="adjustResize">
-        </activity>
-        <activity android:name=".carDetails.views.activities.AHCarActivity"/>
+        <activity
+            android:name=".authentication.views.activities.AHAuthActivity"
+            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".carDetails.views.activities.AHCarActivity" />
         <activity android:name=".home.views.activities.AHHomeActivity" />
         <activity android:name=".splashscreen.AHSplashScreenActivity">
             <intent-filter>
@@ -33,6 +33,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <service
+            android:name=".services.AHFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
