--- a/AutoHunt/gradleScripts/dependencies.gradle
+++ b/AutoHunt/gradleScripts/dependencies.gradle
@@ -5,9 +5,9 @@ ext {
             'material'          : '1.1.0',
             'constraintLayout'  : '1.1.3',
             'swipeRefreshLayout': '1.0.0',
-            'appCompat'          : '1.1.0',
-            'legacy'             : '1.0.0',
-            'viewPager2'         : '1.0.0',
+            'appCompat'         : '1.1.0',
+            'legacy'            : '1.0.0',
+            'viewPager2'        : '1.0.0',
 
             // Architecture components
             'lifecycle'         : '2.2.0',
@@ -20,7 +20,7 @@ ext {
             'paging'            : '2.1.2',
             'retrofit'          : '2.8.0',
             'gson'              : '2.8.6',
-            'okhttp'            : '4.4.1',
+            'okhttp'            : '4.5.0',
 
             // Image
             'circleImageView'   : '3.1.0',
@@ -31,6 +31,8 @@ ext {
             // Utils
             'timber'            : '4.7.1',
             'spinner'           : '1.4.0',
-            'bubbleNavigation'  : '1.0.7'
+            'bubbleNavigation'  : '1.0.7',
+            'conscrypt'         : '2.2.1',
+            'progressLibrary'   : '2.1.3'
     ]
 }
