--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,3 +21,13 @@ steps:
     publishJUnitResults: false
     testResultsFiles: '**/TEST-*.xml'
     tasks: 'assembleDebug'
+
+- task: AndroidSigning@3
+  inputs:
+    apkFiles: '**/*.apk'
+    jarsign: true
+    jarsignerKeystoreFile: 'AutoHunt/autohunt-keys/autohuntkeystore'
+    jarsignerKeystorePassword: '$(jarsignerKeystorePassword)'
+    jarsignerKeystoreAlias: 'appautohunt'
+    jarsignerKeyPassword: '$(jarsignerKeyPassword)'
+    zipalign: true
