--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,9 +25,9 @@ steps:
 - task: AndroidSigning@3
   inputs:
     apkFiles: '**/*.apk'
-    apksign: true
-    apksignerKeystoreFile: 'autohuntkeystore'
-    apksignerKeystorePassword: '$(jarsignerKeystorePassword)'
-    apksignerKeystoreAlias: 'appautohunt'
-    apksignerKeyPassword: '$(jarsignerKeyPassword)'
+    jarsign: true
+    jarsignerKeystoreFile: 'autohuntkeystore'
+    jarsignerKeystorePassword: '$(jarsignerKeystorePassword)'
+    jarsignerKeystoreAlias: 'appautohunt'
+    jarsignerKeyPassword: '$(jarsignerKeyPassword)'
     zipalign: false
