--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -25,10 +25,10 @@ steps:
 - task: AndroidSigning@3
   inputs:
     apkFiles: '**/*.apk'
-    jarsign: true
-    jarsignerKeystoreFile: 'autohuntkeystore'
-    jarsignerKeystorePassword: '$(jarsignerKeystorePassword)'
-    jarsignerKeystoreAlias: 'appautohunt'
-    jarsignerKeyPassword: '$(jarsignerKeyPassword)'
+    apksign: true
+    apksignerKeystoreFile: 'autohuntkeystore'
+    apksignerKeystorePassword: '$(jarsignerKeystorePassword)'
+    apksignerKeystoreAlias: 'appautohunt'
+    apksignerKeyPassword: '$(jarsignerKeyPassword)'
     apksignerArguments: --ks-pass stdin  --key-pass stdin 
     zipalign: false
