--- a/AutoHunt/app/build.gradle
+++ b/AutoHunt/app/build.gradle
@@ -93,6 +93,11 @@ dependencies {
     implementation "com.gauravk.bubblenavigation:bubblenavigation:$versions.bubbleNavigation"
     implementation "org.conscrypt:conscrypt-android:$versions.conscrypt"
     implementation "com.wang.avi:library:$versions.progressLibrary"
+
+    // App Center
+    def appCenterSdkVersion = '3.2.1'
+    implementation "com.microsoft.appcenter:appcenter-analytics:${appCenterSdkVersion}"
+    implementation "com.microsoft.appcenter:appcenter-crashes:${appCenterSdkVersion}"
 }
 
 apply plugin: 'com.google.gms.google-services'
